Fix/overlap text (#43)
* fix: make circle follow img corner in all resolutions

* fix: removed padding from text

--- a/styles/includes/_overlap.scss
+++ b/styles/includes/_overlap.scss
@@ -90,7 +90,6 @@
 		@include spacing-400(margin-left);
 
 		margin: auto;
-		padding-left: $spacing--400;
 		@include bp-xs() {
 			@include spacing-400(margin-top);
 
